--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #00162E;
     --fundo-senha: #00244D;
     --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --borda: #09ff00;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
@@ -132,16 +132,16 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #0cc5e6;
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #fa7d08ec;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #9900ffb0;
     width: 100%;
 }
 
